2002-02-07  Simon Waters <simon@wretched.demon.co.uk>

	* Moved Lukas's version into CVS

	* Adjusted version string to 5.03

	* Reimplemented bk in better fashion

	* Added self to authors file


2002-02-06  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* Clean-ups to make it build with the Sun cc compiler.

	* moved leadz() and nbits() to inlines.h, so that they will
	really be inlined. Left the original versions in util.c,
	so that one can define NO_INLINE to get the functions
	exported. Speed gain is quite significant on Linux/PPC.

2002-02-05  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* Fixed a nasty bug in buf_to_book() which would add position
	evaluations to all the hash-collision positions while traversing
	the list. As collisions are not very frequent, this would
	generate slightly wrong books which could lead to infrequent
	strange opening blunders.

	* Abstracted hash handling functions in book.c into macros,
	implemented secondary hash traversal.

2002-02-04  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* Removed index from binary book file, continued fixing book
	building. (It used to take only the white moves if two players
	from the list were playing each other.)

	* Added return codes to function in book.c.

2002-02-03  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* Killed some bugs related to endianness and padding in
	book.c. Rewrote README to reflect reality more closely. Split
	BookBuilderOpen() from BookBuilder().

2002-02-02  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* Cleaned up some types, converted them to explicit ones uint32_t,
	uint16_t and uint64_t. Should fix the bug that hashes generated on
	64 bit machines were different. Thanks to Goswin Brederlow
	<goswin.brederlow@student.uni-tuebingen.de> for this one.

	* Fixed a documentation bug (replaced "book compile" by "book
	add")

	* Added readline support

	* Added TODO
	
2002-01-30  Lukas Geyer  <geyer@math.uni-dortmund.de>
